[package]
name = "lbd"
version = "0.1.0"
authors = ["Ernest Romero <ernest@tokbox.com>"]

[lib]
name = "lbd"
path = "src/lib.rs"

[[bin]]
name = "lbd"
path = "src/lbd.rs"
test = true
doctest = true

[[bin]]
name = "lbdd"
path = "src/lbdd.rs"
test = true
doctest = true

[dependencies]
log4rs = "0.3.3"
env_logger = "0.3.1"
log = "0.3.1"
docopt = "0.6.73"
docopt_macros = "0.6.73"
rustc-serialize = "0.3"
toml = "0.1.22"
#Iron deps
iron = "0.2.2"
staticfile = "0.0.6"
urlencoded = "0.2.0"
router = "0.0.15"
term = "0.2.11"
logger = "0.0.3"


